<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bytetrack_cpp_node</name>
  <version>0.1.0</version>
  <description>ByteTrack ROS2 Node</description>
  <maintainer email="53618876+fateshelled@users.noreply.github.com">fateshelled</maintainer>
  <license>MIT License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>image_transport</depend>
  <depend>std_msgs</depend>
  <depend>bboxes_ex_msgs</depend>
  <depend>bytetrack_cpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
